crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_metadata_view_additional_columns_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: "normalize_search_response(resp, ts.redact_tied_results)"
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": 0.54,
      "data": {
        "question": "How many multiples of 4 are there between 1 and 30? List them and count the total."
      },
      "dataset": "qs_view",
      "matches": "[redacted]",
      "primary_key": "[redacted]"
    },
    {
      "_score": 0.53,
      "data": {
        "question": "Which base number, when raised to the fifth power, equals thirty-two?"
      },
      "dataset": "qs_view",
      "matches": "[redacted]",
      "primary_key": "[redacted]"
    },
    {
      "_score": 0.53,
      "data": {
        "question": "Evaluate the expression \\( 2 - 2x^2 \\), where \\( x = -3 \\)."
      },
      "dataset": "qs_view",
      "matches": "[redacted]",
      "primary_key": "[redacted]"
    },
    {
      "_score": 0.52,
      "data": {
        "question": "What is the fifth root of 32?"
      },
      "dataset": "qs_view",
      "matches": "[redacted]",
      "primary_key": "[redacted]"
    }
  ]
}
